style.css
.cormorant-upright-light {
    font-family: "Cormorant Upright", system-ui;
    font-weight: 300;
    font-style: normal;
}

.cormorant-upright-regular {
    font-family: "Cormorant Upright", serif;
    font-weight: 400;
    font-style: normal;
}

.cormorant-upright-bold {
    font-family: "Cormorant Upright", serif;
    font-weight: 700;
    font-style: italic;
}

body {
    color: #ece7e7;
    margin: 0;
    padding: 0;
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 10%, rgba(0, 0, 0, 0.0));
}

.container {
    height: 100vh;
    margin: 0 auto;
    text-align: center;
    display: grid;
    flex-direction: column;
}

.top {
    flex: 1;
    max-width: 600px;
    justify-self: center;
}

.title {
    font-size: 2.5em;
    margin-bottom: 10px;
}

.description {
    font-size: 1em;
    line-height: 1.6;
    margin-bottom: 30px;
}

.image-container {
    position: relative;
}

.bowl-image {
    border-radius: 50%;
    object-fit: cover;
    max-height: 500px;
    -webkit-filter: drop-shadow(5px 5px 10px #222);
    filter: drop-shadow(5px 5px 15px #222);
}

.flavor-selector {
    margin-bottom: 20px;
}

.flavor-selector button {
    font-family: "Cormorant Upright", serif;
    font-weight: 400;
    font-style: normal;
    background: none;
    border: none;
    color: #ece7e7;
    filter: opacity(50%);
    font-size: 1.1em;
    margin: 0 10px;
    padding: 5px 10px;
    cursor: pointer;
    transition: all 0.3s ease;
}

.flavor-selector button:hover,
.flavor-selector button.active {
    filter: opacity(100%);
}

.navigation {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navigation button {
    transition: all 0.3s ease;
    margin: 0 20px;
    outline: 0.5px solid #ece7e7;
    border: none;
    border-radius: 50%;
    width: 80px;
    height: 80px;
    padding: 20px;
    background: rgba(256, 256, 256, 0.2);
    cursor: pointer;
    font-size: 2em;
    color: #ece7e7;
}

.navigation button:hover {
    transform: scale(1.2);
}

@media (min-width: 1024px) {
    .bottom {
        margin: 0 40px;
    }
}

@media (max-width: 600px) {
    .container {
        display: flex;
        align-items: center;
        max-height: 90vh;
    }

    .top, .bottom {
        max-width: 90vw;
        justify-self: center;
    }

    .bottom {
        margin-bottom: 20px;
    }

    .bowl-image {
        width: 90vw;
    }

    h1 {
        font-size: 2em;
    }

    .flavor-selector button {
        margin: 5px;
    }

    .prev, .next {
        display: none;
    }
}

